--- a/content/stylesheets/application.sass
+++ b/content/stylesheets/application.sass
@@ -1,10 +1,9 @@
-@import "compass/reset"
-// @import "compass/css3/border-radius"
-// @import "compass/css3/box-shadow"
-// @import "compass/css3/text-shadow"
-// @import "compass/css3/gradient"
-//
 // See http://compass-style.org/reference/compass/css3/ for more modules
+@import "compass/reset"
+@import "compass/css3/border-radius"
+@import "compass/css3/box-shadow"
+@import "compass/css3/text-shadow"
+@import "compass/css3/gradient"
 
 body
   background-color: #ffffff
