--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -1,9 +1,13 @@
 !!! 5
 %html
   %head
-    %meta{:charset => 'UTF-8'}
+    %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}/
+    %meta{"http-equiv" => "Content-Language", :content=> "en-us" }/
+    %meta{:name => "keywords", :content => @item[:keywords] }/
+    %meta{:name => "description", :content => @item[:description] }/
     %title= @item[:title]
-    %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/application.css'}
+
+    %link{:type => 'text/css', :href => '/stylesheets/application.css', :rel => 'stylesheet'}
     %script{:type => 'text/javascript', :src => '/javascripts/application.js'}
   %body
     = yield
